objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Amount_to_pay__c</fullName>
        <label>Amount to pay</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_code__c</fullName>
        <label>Unique code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Promotion</label>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>